# LitLens

./: .gitignore  AWS_SETUP.md  README.md  chainlit_app.py  chat_pipeline.py  config.yaml  dynamo_persistence.py  dynamo_table_creation.py  dynamodb-policy.json  installation-straight.txt  modal-identity.py  modal-model_download.py  modal_app.py  rag_backend.py  rag_backend_lite.py  rag_backendv2.py  test_proper.py  trust-policy.json
extra_code/: DEPLOYMENT_GUIDE.md  chainlit_data_layer.py  chat_pipeline_v0.py  cli_chat.py  embedding_search copy.py  fastapi_backend.py  generator-transformers.py  generator-v3q.py  generator_v1.py  generator_v2.py  hallucination_check-minicheck.py  hallucination_checker_v0.py  qwen-awq-test.py  request_tracer.py  reranker-qwen.py  reranker-test.py  reranker-test1.py  reranker-v2.py  reranker_test_2.py  test_concurrent.py  test_proper.py
inference/: bm25_search.py  chainlit_app.py  chat_pipeline.py  cli_chat.py  embedding_search.py  generator.py  hallucination_checker.py  readme.md  reranker.py  session_logger.py
inference/.ipynb_checkpoints/: cli_chat-checkpoint.py
ingestion/: ingestion_pipeline.sh  ingestion_pipeline_interactive.sh  page_rotation.py
installation-locks/inference/: pyproject.toml  readme.md
installation-locks/ingestion/: pyproject.toml  readme.md
synthetic data generation/: eval_generator.py  eval_generator_v2.py  rag_eval_dataset.json  vllm_server.sh
utils/: config_loader.py  logger.py
utils/.ipynb_checkpoints/: config_loader-checkpoint.py  logger-checkpoint.py
