[tool.poetry]
package-mode = false

[project]
name = "vllm-code"
version = "0.1.0"
description = "Uses VLLMs library with flash attn"
authors = [
    {name = "Kishan Sathish Babu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "vllm (>=0.11.0,<0.12.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (<2.0)",
    "peft (>=0.18.0,<0.19.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
